Fix right side jumping on height change on left for duo enterprise trial
- when state selection pops in and out of DOM it caused a height
  change. This fixes that.
- behind a feature flag.

--- a/ee/app/assets/stylesheets/pages/gitlab_subscriptions.scss
+++ b/ee/app/assets/stylesheets/pages/gitlab_subscriptions.scss
@@ -29,7 +29,7 @@
   .bg-decorations {
     @include gl-media-breakpoint-up(md) {
       background-image: url('illustrations/bg-decorations.svg');
-      background-position: bottom 7% right 75px;
+      background-position: top 275px right 75px;
     }
   }
 }
